# LLM

./: README.md
AgentePessoal/: .env.example  .gitignore  documentation.html  main.py  pyproject.toml  requirements.txt  scratch.py
AgentePessoal/.agents/skills/avaliador-veicular-concessionaria/: SKILL.md
AgentePessoal/.agents/skills/avaliador-veicular-concessionaria/workspace/: eval-70b.json  eval-final.json  eval-template.json  eval_results.json
AgentePessoal/.agents/skills/avaliador-veicular-concessionaria/workspace/iteration-1/eval-1/: output.json
AgentePessoal/.agents/skills/avaliador-veicular-concessionaria/workspace/iteration-1/eval-2/: output.json
AgentePessoal/.agents/skills/avaliador-veicular-concessionaria/workspace/iteration-1/eval-3/: output.json
AgentePessoal/.agents/skills/avaliador-veicular-concessionaria/workspace/iteration-2/eval-3/: output.json
AgentePessoal/.agents/skills/avaliador-veicular-concessionaria/workspace/iteration-2/eval-4/: output.json
AgentePessoal/.agents/skills/noticias-resumo/: SKILL.md
AgentePessoal/.agents/skills/noticias-resumo/evals/: evals.json
AgentePessoal/.agents/skills/pdf-analyzer/: SKILL.md
AgentePessoal/.agents/skills/psicologa/: SKILL.md
AgentePessoal/src/core/: agent_controller.py  agent_loop.py  output_handler.py
AgentePessoal/src/providers/: provider_factory.py
AgentePessoal/src/skills/: skill_loader.py  skill_router.py
AgentePessoal/src/tools/: base_tool.py  search_tool.py  tool_registry.py
AgentePessoal/tests/: __init__.py
AgentePessoal/tests/core/: test_agent_controller.py
(+6 files in other folders)
